Chnaged the title.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Snandan.github.io by snandan</title>
+    <title>snandan.github.io by snandan</title>
   </head>
 
   <body>
