--- a/_posts/2012-08-13-operator-module-in-python.html
+++ b/_posts/2012-08-13-operator-module-in-python.html
@@ -12,25 +12,29 @@ meta: {}
 Python has a fantastic module called 'operator'.
 The full documentation can be found in: <a title="Python docs" href="http://docs.python.org/library/operator">http://docs.python.org/library/operator</a>
 It has three main objects:
+
 <strong>attrgetter</strong> : After, f=attrgetter('name'), the call f(r) returns r.name. <em>Looks for attribute</em>
+
 <strong>itemgetter</strong> : After, f=itemgetter(2), the call f(r) returns r[2]. <em>Looks for indexed item</em>
-<strong> methodcaller  </strong>: After, f=methodcaller('name'), the call f(r) returns r.name(). <em>Looks for method<strong>
+
+<strong> methodcaller </strong>: After, f=methodcaller('name'), the call f(r) returns r.name(). <em>Looks for method<strong>
 </strong></em>
 
-[sourcecode language="python" wraplines="false" collapse="false"]
-&gt;&gt;&gt; import operator
-&gt;&gt;&gt; l_of_l = [['a', 5, 'b'], ['z', 1, 'y'], ['p', 4, 'g']]
-&gt;&gt;&gt; sorted(l_of_l, key=operator.itemgetter(1))
+{% highlight python %}
+>>> import operator
+>>> l_of_l = [['a', 5, 'b'], ['z', 1, 'y'], ['p', 4, 'g']]
+>>> sorted(l_of_l, key=operator.itemgetter(1))
 [['z', 1, 'y'], ['p', 4, 'g'], ['a', 5, 'b']]
-&gt;&gt;&gt; sorted(l_of_l, key=operator.itemgetter(0))
+>>> sorted(l_of_l, key=operator.itemgetter(0))
 [['a', 5, 'b'], ['p', 4, 'g'], ['z', 1, 'y']]
-&gt;&gt;&gt; sorted(l_of_l, key=operator.itemgetter(2))
+>>> sorted(l_of_l, key=operator.itemgetter(2))
 [['a', 5, 'b'], ['p', 4, 'g'], ['z', 1, 'y']]
-[/sourcecode]
+{% endhighlight %}
 
 Anything which can compete with the first example above is the following Lisp code
-<div>
-<div id="LC1">(setf l_of_l '((z 1 y) (p 4 g) (a 5 b)))</div>
-<div id="LC2">(sort l_of_l #'(lambda (a b) (&lt; (car (cdr a))</div>
-<div id="LC3">                                (car (cdr b)))))</div>
-</div>
+
+{% highlight scheme %}
+(setf l_of_l '((z 1 y) (p 4 g) (a 5 b)))
+(sort l_of_l #'(lambda (a b) (< (car (cdr a))
+                  (car (cdr b)))))
+{% endhighlight %}
